--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addition.cs" />
+    <Compile Include="cos.cs" />
+    <Compile Include="Ctg.cs" />
     <Compile Include="Deduction.cs" />
     <Compile Include="Division.cs" />
     <Compile Include="Form1.cs">
@@ -54,9 +56,15 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Generation.cs" />
+    <Compile Include="IOneArgCalculator.cs" />
     <Compile Include="ITwoArgCalculator.cs" />
+    <Compile Include="Ln.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="OneArgFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sin.cs" />
+    <Compile Include="Tg.cs" />
     <Compile Include="TwoArgFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
