--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sin.cs" />
+    <Compile Include="Sqrt.cs" />
     <Compile Include="Tg.cs" />
     <Compile Include="TwoArgFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
