--- a/Calculator/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator/Calculator.Tests/Calculator.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgFactoryTests.cs" />
     <Compile Include="OneArg\CosTests.cs" />
     <Compile Include="OneArg\CtgTests.cs" />
     <Compile Include="OneArg\LnTests.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="OneArg\SinTests.cs" />
     <Compile Include="OneArg\SqrtTests.cs" />
     <Compile Include="OneArg\TgTests.cs" />
+    <Compile Include="TwoArgFactoryTests.cs" />
     <Compile Include="TwoArg\DeductionTests.cs" />
     <Compile Include="TwoArg\DivisionTests.cs" />
     <Compile Include="TwoArg\GenerationTests.cs" />
